--- a/client/src/components/Posts/Comments/SingleComment/SingleComment.module.css
+++ b/client/src/components/Posts/Comments/SingleComment/SingleComment.module.css
@@ -45,7 +45,7 @@
 
 .timeText {
   font-size: 0.8rem;
-  color: var(--grey-500);
+  color: var(--grey-600);
 }
 
 .contentText {
